--- a/src/main/resources/templates/states.html
+++ b/src/main/resources/templates/states.html
@@ -139,6 +139,8 @@
 			};
 		location.href = "http://www.google.com";
 		L.geoJSON(geojsonFeature).addTo(map); */
+		
+		location.href="http://localhost:8080/zipcodes/dataset/ByOy3EpZipCode/states/Maryland?filter=areaType==URBAN";
 	}
 
 	function onEachFeature(feature, layer) {
