--- a/src/main/resources/templates/zipcodes.html
+++ b/src/main/resources/templates/zipcodes.html
@@ -29,7 +29,8 @@
 <div id='map'></div>
 
 <!-- <script type="text/javascript" src="http://localhost:8080/maps/dataset/ByOy3EpZipCode/state/Maryland?search=areaType==URBAN"></script>-->
-<script type="text/javascript" th:src="@{/maps/zipcodes/dataset/ByOy3EpZipCode(search=${filter},state=${state})}"></script>
+<script type="text/javascript" th:src="@{/maps/zipcodes(search=${filter},state=${state},dataset=${dataset})}"></script>
+<script type="text/javascript" th:src="@{/maps/feature(state=${state})}"></script>
 
 <script type="text/javascript">
 
@@ -37,9 +38,7 @@
 
 	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+		attribution: 'Imagery © <a href="http://www.archsystemsinc.com">ArchSystems</a>',
 		id: 'mapbox.light'
 	}).addTo(map);
 
@@ -54,15 +53,12 @@
 	};
 
 	info.update = function (props) {
-		this._div.innerHTML = '<h4>EP Count By Region</h4>' +  (props ?
-			'<b>' + props.ZipCode + '</b><br />' + props.NumberOfEPs + ' people / mi<sup>2</sup>'
-			: 'Hover over a state');
+		this._div.innerHTML = '<h4>Number of EPs By ZipCode in </h4>' +  (props ?
+			'State: <b>' + props.State + '</b><br />Count: <b>' + props.NumberOfEPs + ' </b><br/>Region: <b>'+props.Area+'</b><br/>State: <b>'+props.State+'</b>'
+			: 'Hover Over a ZipCode');
 	};
 
 	info.addTo(map);
-
-	
-
 	// get color depending on population density value
 	function getColor(d) {
 		return d > 40 ? '#800026' :
@@ -140,6 +136,7 @@
 	}
 
 	function onEachFeature(feature, layer) {
+		map.fitBounds(layer.getBounds());
 		layer.on({
 			mouseover: highlightFeature,
 			mouseout: resetHighlight,
@@ -148,11 +145,7 @@
 	}
 	
 	function onEachStateFeature(feature, layer) {
-		layer.on({
-			mouseover: highlightFeature,
-			mouseout: resetHighlight
-			
-		});
+		
 	}
 
 	geojson = L.geoJson(data, {
@@ -160,7 +153,11 @@
 		onEachFeature: onEachFeature
 	}).addTo(map);
 	
-	map.attributionControl.addAttribution('Population data &copy; <a href="http://census.gov/">US Census Bureau</a>');
+	geojson = L.geoJson(stateData, {
+		onEachFeature: onStateEachFeature
+	}).addTo(map);
+	
+	map.attributionControl.addAttribution('');
 
 	var legend = L.control({position: 'bottomright'});
 
